# Rust-Audio-Downloader

./: .gitignore  LICENSE  README.md  package.json  pnpm-workspace.yaml
app/backend/: Cargo.toml
app/backend/src/: errors.rs  handlers.rs  main.rs  media.rs  port.rs  types.rs
app/frontend/: index.html  package-lock.json  package.json  tsconfig.json
app/frontend/src/: api.ts  main.ts  state.ts  style.css  ui.ts  utils.ts
