[package]
name = "audio_downloader_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
calamine = "0.24"
csv = "1.3"
dirs = "5.0"
lofty = "0.18"
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rust_xlsxwriter = "0.69"
rfd = "0.14"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sanitize-filename = "0.5"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.7", features = ["v4"] }

[profile.release]
strip = true
